--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "input-otp": "^1.4.2",
     "isbot": "^4.1.0",
     "lucide-react": "^0.525.0",
+    "mongoose": "^8.16.2",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-day-picker": "^9.8.0",
